<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructureapp.RockActivity">

    <LinearLayout style="@style/RadioHolderStyle">

        <ScrollView
            android:id="@+id/explanation"
            style="@style/ExplanationsScrollStyle">

            <LinearLayout style="@style/ExplanationHolderStyle">

                <TextView
                    style="@style/ExplanationsStyle"
                    android:text="@string/radio_explenation" />

                <Button
                    android:id="@+id/closeExplanationButton"
                    style="@style/CloseExplanationStyle" />
            </LinearLayout>
        </ScrollView>

        <ScrollView style="@style/ContentHolderStyle">

            <LinearLayout style="@style/ContentStyle">

                <Button
                    android:id="@+id/wzxr"
                    style="@style/RadioOptionStyle"
                    android:drawableRight="@drawable/wzxrlogo"
                    android:text="@string/wzxr" />

                <View style="@style/BorderGenreStyle" />

                <Button
                    android:id="@+id/klaq"
                    style="@style/RadioOptionStyle"
                    android:drawableRight="@drawable/klaqlogo"
                    android:text="@string/klaq" />

                <View style="@style/BorderGenreStyle" />

                <Button
                    android:id="@+id/swhrock"
                    style="@style/RadioOptionStyle"
                    android:drawableRight="@drawable/swhrocklogo"
                    android:text="@string/swhrock" />

                <View style="@style/BorderGenreStyle" />

                <Button
                    android:id="@+id/planetrock"
                    style="@style/RadioOptionStyle"
                    android:drawableRight="@drawable/planetrocklogo"
                    android:text="@string/planetrock" />

                <View style="@style/BorderGenreStyle" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout style="@style/PlayerStyle">

        <ImageButton
            android:id="@+id/playButton"
            style="@style/PlayPauseButtonsStyle"
            android:src="@drawable/playbutton" />

        <ImageButton
            android:id="@+id/pauseButton"
            style="@style/PlayPauseButtonsStyle"
            android:src="@drawable/pausebutton"
            android:visibility="gone" />

        <View style="@style/VerticalBorderWhiteStyle" />

        <LinearLayout style="@style/StatusHolderStyle">

            <TextView
                android:id="@+id/statusText"
                style="@style/StatusStyle"
                android:text="@string/noradio" />

            <TextView
                android:id="@+id/radioNameStatus"
                style="@style/RadioThatIsPlayingStyle"
                android:layout_below="@id/statusText" />
        </LinearLayout>

        <View style="@style/VerticalBorderWhiteStyle" />

        <ImageButton
            android:id="@+id/returnButton"
            style="@style/PlayPauseButtonsStyle"
            android:src="@drawable/returnbutton" />
    </LinearLayout>
</LinearLayout>
